--- a/todo
+++ b/todo
@@ -1,1 +1,8 @@
-chariots of fire verbeteren + muziek bij film
+plan
+klassiek muziek stuk sschrijven op piano en celeste, dulcitone etc-> elektronisch instrumenten (impressionisme)
+
+rock nummer schrijven voor bij thelma and louise (fleetwood mac style, crazy on you) -> chillere versie hermanoz guiterrez??
+
+mensen vragenlijst in laten vullen
+
+reflectie schrijven over proces
